--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="test_eventBusEventHierarchy">Event Inheritance</string>
     <string name="test_eventBusEventIgnoreGeneratedIndex">Ignore generated index</string>
     <string name="test_otto">OttoBus</string>
+    <string name="test_rxbus">RxBus</string>
     <string name="test_broadcast">Broadcast</string>
     <string name="test_localBroadcast">Local Broadcast</string>
     <string name="eventViewText">Events:</string>
